compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__recursion__shadowing_so_not_recursive.snap
---
source: compiler-core/src/javascript/tests/recursion.rs
assertion_line: 54
expression: "\npub fn map(map) {\n  map()\n}\n"
---
export function map(map) {
  return map();
}

