compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__recursion__tco_case_block.snap
---
source: compiler-core/src/javascript/tests/recursion.rs
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> {\n      let y = x\n      main(y - 1)\n    }\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> {
      let y = x
      main(y - 1)
    }
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  while (true) {
    if (x === 0) {
      return undefined;
    } else {
      let y = x;
      x = y - 1;
    }
  }
}
